--- a/code/VRStrike/UI/SpawnMenu/SpawnMenuPanel.html
+++ b/code/VRStrike/UI/SpawnMenu/SpawnMenuPanel.html
@@ -4,5 +4,5 @@
     <button onclick="Test()"><text>1</text></button>
     <button onclick="Test()"><text>2</text></button>
     <button onclick="Test()"><text>3</text></button>
-
+    <button onclick="Test()"><text>4</text></button>
 </div>
