Basic spawn menu working

--- a/code/VRStrike/UI/SpawnMenu/SpawnMenuPanel.html
+++ b/code/VRStrike/UI/SpawnMenu/SpawnMenuPanel.html
@@ -1,8 +1,7 @@
 <link rel="stylesheet" href="SpawnMenuPanel.scss" />
 
 <div>
-    <button onclick="Test()"><text>1</text></button>
-    <button onclick="Test()"><text>2</text></button>
-    <button onclick="Test()"><text>3</text></button>
-    <button onclick="Test()"><text>4</text></button>
+    <button onclick="SpawnAR4()"><text>Spawn AR4</text></button>
+    <button onclick="SpawnMAC11()"><text>Spawn MAC11</text></button>
+    <button onclick="SpawnMug()"><text>Spawn Mug</text></button>
 </div>
